# ranking_divergence

./: .gitignore  README.md  pyproject.toml
cache/generated_texts/gpt2/: samples_steps64_temp0.600.json  samples_steps64_temp0.625.json  samples_steps64_temp0.650.json  samples_steps64_temp0.675.json  samples_steps64_temp0.700.json  samples_steps64_temp0.725.json  samples_steps64_temp0.750.json  samples_steps64_temp0.775.json  samples_steps64_temp0.800.json  samples_steps64_temp0.825.json  samples_steps64_temp0.850.json  samples_steps64_temp0.875.json  samples_steps64_temp0.900.json  samples_steps64_temp0.925.json  samples_steps64_temp0.950.json  (+2 more)
docs/: diffusion_sweep_analysis.md  important_results.md
examples/: build_all_methods_report.py  evaluate_diffusion_sweeps.py  evaluate_gpt2_openwebtext.py  evaluate_parameter_free_baselines.py  hf_gen_ppl_sanity.py  openwebtext_analysis.py  plot_diffusion_sweeps.py  plot_efficiency_pareto.py  plot_parameter_free_baselines.py
examples/generation/: generate_ar_samples.py
outputs/: hf_gen_ppl_sanity.json  hf_gen_ppl_sanity_1024.json
outputs/all_methods_report/: README.md  all_metrics.csv  best_rank_configurations.csv  rank_wasserstein_efficiency_pareto_points.csv
scripts/generation/: generate_ar_samples_tpu.py
src/ranking_divergence/: __init__.py  baselines.py  data.py  evaluation.py  metrics.py  rank.py
tests/: test_all_methods_report.py  test_diffusion_sweep_cli.py  test_diffusion_sweep_plots.py  test_efficiency_pareto.py  test_openwebtext_analysis_cli.py  test_parameter_free_plots.py  test_rank.py
(+567 files in other folders)
