[project]
name = "ranking-divergence"
version = "0.1.0"
description = "LLM rank-histogram divergences and lightweight text generation metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "torch==2.5.1",
    "tqdm>=4.64",
    "transformers>=4.24,<5",
]

[project.optional-dependencies]
examples = [
    "datasets>=2.14",
    "evaluate>=0.4",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
